fixed some user out of bounds areas. Inluded an error page to correct the out of bounds errors. Organized aws parts of code into aws file

--- a/static/mainstyles/styles.css
+++ b/static/mainstyles/styles.css
@@ -305,3 +305,9 @@ hr.solid {
     padding:1rem;
     background-color: #161B22;
 }
+
+#error_centering_div{
+    width:fit-content;
+    margin:auto;
+    color:#40798C;
+}
